force-app/main/default/objects/Volume_Based_Discount__mdt/Volume_Based_Discount__mdt.object-meta.xml
<CustomObject>
    <label>Volume Based Discount</label>
    <pluralLabel>Volume Based Discounts</pluralLabel>
</CustomObject>