force-app/main/default/objects/Volume_Based_Discount__mdt/fields/Markup_Price__c.field-meta.xml
<CustomField>
    <fullName>Markup_Price__c</fullName>
    <label>Markup Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>