force-app/main/default/objects/Volume_Based_Discount__mdt/fields/Markup_Quantity_G_KG__c.field-meta.xml
<CustomField>
    <fullName>Markup_Quantity_G_KG__c</fullName>
    <label>Markup Quantity &gt; (KG)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>