force-app/main/default/objects/Volume_Based_Discount__mdt/fields/Markup_Quantity_Kg__c.field-meta.xml
<CustomField>
    <fullName>Markup_Quantity_Kg__c</fullName>
    <label>Markup Quantity &lt; (KG)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>