force-app/main/default/objects/Volume_Based_Discount__mdt/listViews/New.listView-meta.xml
<ListView>
    <fullName>New</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Markup_Price__c</columns>
    <columns>Markup_Quantity_Kg__c</columns>
    <columns>Markup_Quantity_G_KG__c</columns>
    <filterScope>Everything</filterScope>
    <label>New</label>
</ListView>